--- a/style.css
+++ b/style.css
@@ -10,13 +10,19 @@ header {
     justify-content: center;
 }
 
+.timer {
+    position: absolute; 
+    top: 10%;
+    right: 10%;
+}
 
 .conteudo {
-    margin-left: 15%;
-    margin-right: 15%;
+    margin-left: 10%;
+    margin-right: 10%;
     display: flex;
     flex-wrap: wrap;;
 }
+
 .titulo {
     font-family: 'Roboto', sans-serif;
     font-size:53px;
@@ -45,6 +51,7 @@ img {
     height: 100px;
 }
 
+
 .frente {
     display: none;
 }
@@ -58,9 +65,27 @@ img {
 }
 
 .selecionado {
-    border: 10px solid cyan;
+    border: 2px solid cyan;
 }
 
-.selecionado1 {
-   background-color: blue;
+@media (max-width: 576px) {
+    .conteudo {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
+
+    .titulo {
+        font-size:36px;
+        margin-top: 40px;
+        font-weight: 700px;
+        color: #75B79E;
+        margin: 40px auto;
+        text-align: center;
+    }
+
+    .timer {
+        top: 15%;
+        right: 5%;
+    }
 }
